--- a/css/slider.css
+++ b/css/slider.css
@@ -73,10 +73,10 @@
 
   /* Собственно сам слайдер */
 .slider{
-  max-width: 90%;
+  width: 600px;
+  height: 400px;
   position: relative;
   margin: auto;
-  height: 300px;
   margin-bottom: 15px;
   overflow: hidden;
 }
@@ -84,7 +84,7 @@
 .slider .item img {
   object-fit: cover;
   width: 100%;
-  height: 300px;
+  height: 100%;
   border: none !important;
   box-shadow: none !important;
 }
